# ra_fb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.cursor/commands/: rafb.md
data/: README.md
docs/: Notta_Zapier_連携設定.md  README.md  Slack_App実装ガイド.md  Slack_rafb_fb_コマンド設定.md  Slack_テキストファイルアップロード設定.md  Slack_個別連携設定.md  Slack_全体の流れとチェック.md  プロジェクト構成.md  メンバー向けセットアップガイド.md  ローカルSlack連携の手順.md  問題点・改善レポート.md  設定チェックリスト.md  起動ガイド.md
ra_fb/: __init__.py  company.py  config.py  feedback.py  slack.py  utils.py
references/: README.md  初回面談_確認チェックリスト.md
references/candidate_attract/: README.md  market_segments.py  recruitment-playbook.md
references/long_calls/: README.md  Slack_FB_アウトプットイメージ.md  Slack_FB_サンプルデータ.md  初回架電FB_サンプル（サンケイビル_小山田）.md  小山田vs大城_課題整理.md  茂野vs小山田_アウトプットイメージ（実サンプル）.md  茂野vs小山田_課題整理.md
references/manual/: PSS_プロフェッショナルセリングスキル.md  PSS_要点.md  README.md  事前商談前リサーチ.md  営業新規架電マニュアル.md  架電マニュアル_要点.md
references/営業のヒアリング情報/: README.md  電気施工管理_構造マップ_v4.html
references/法人マスタ/: AIRU_ENG.md  DAIICHI_DENKO.md  DENKOSHA_電巧社.md  IA_ENERGY_アイエーエナジー.md  KANTO_HOCCHIKI.md  MURAMOTO_KENSETSU_重野.md  SHINSEI_DENSETSU.md  TOKAI_EC_福岡グループ.md  _template_法人情報.md  マスタ項目一覧.md  土木専門施工.md  太陽光発電工事_現場管理.md  東京神奈川_商業施設_公共_施工管理.md  電気工事_関東.md  電気設備施工管理_首都圏.md
references/法人面談議事録/: README.md  (+19 more)
scripts/: README.md  bulk_import_company.py  cli.py  compare_companies.py  generate_feedback.py  migrate_company_master.py  post_to_slack.py  slack_app_server.py  slack_server.py  supplement_company_research.py  update_playbook.py  webhook_server.py
(+66 files in other folders)
